application.properties 한글 설정

--- a/finalProject/src/main/resources/application.properties
+++ b/finalProject/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-# Server Port 설정
+# Server Port 설정
 server.port=8000
 
-# DataSource 설정
+# DataSource 설정
 spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
 spring.datasource.url=jdbc:oracle:thin:@kosa3.iptime.org:50106:orcl
 spring.datasource.username=team5
@@ -12,22 +12,22 @@ spring.datasource.tomcat.max-active=50
 spring.datasource.tomcat.max-idle=20
 spring.datasource.tomcat.min-idle=15
 
-# JPA 설정
+# JPA 설정
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.generate-ddl=false
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.Oracle10gDialect
 spring.jpa.properties.hibernate.format_sql=true
 
-# Log Message 설정
+# Log Message 설정
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
 # Thymeleaf 설정
-# Thymeleaf 참조 경로
+# Thymeleaf 참조 경로
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
-# Thymeleaf 참조 경로에 파일이 있는지 없는지 체크, 없으면 에러 발생
+# Thymeleaf 참조 경로에 파일이 있는지 없는지 체크, 없으면 에러 발생
 spring.thymeleaf.check-template-location=true
-# Thymeleaf에 대한 캐시를 남기지 않음
+# Thymeleaf에 대한 캐시를 남기지 않음
 spring.thymeleaf.cache=false
