MyBatis Test 완료

--- a/finalProject/src/main/resources/application.properties
+++ b/finalProject/src/main/resources/application.properties
@@ -1,33 +1,97 @@
-# Server Port 설정
+
+### Server Port 설정 ###
 server.port=8000
 
-# DataSource 설정
+
+####################
+
+
+### DataSource 설정 ###
+
+# Driver
 spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
+
+# DB URL
 spring.datasource.url=jdbc:oracle:thin:@kosa3.iptime.org:50106:orcl
+
+# DB 접속 아이디
 spring.datasource.username=team5
+
+# DB 접속 비밀번호
 spring.datasource.password=oracle
 
+# 발급된 커넥션이 최대일 때 대기 시간(밀리초)
 spring.datasource.tomcat.max-wait=20000
+
+# 커넥션 풀이 제공할 커넥션의 최대 개수(DB 동시 접속 수)
 spring.datasource.tomcat.max-active=50
+
+# 사용되지 않고 풀에 저장될 수 있는 커넥션의 최대 개수
 spring.datasource.tomcat.max-idle=20
+
+# 사용되지 않고 풀에 저장될 수 있는 커넥션의 최소 개수
 spring.datasource.tomcat.min-idle=15
 
-# JPA 설정
+
+####################
+
+
+### JPA 설정 ###
+
+# 요청받을 테이블이 없을 경우 자동 생성(차단)
 spring.jpa.hibernate.ddl-auto=none
+
+# DDL 생성 시 데이터베이스의 고유 기능을 사용하는지 유무(DDL 요청은 받지 않을거기 때문에 false)
 spring.jpa.generate-ddl=false
+
+# jpa를 이용해 CRUD 요청 시 해당 CRUD의 SQL을 로그로 남김
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.Oracle10gDialect
+
+# 로깅되는 SQL을 보기 좋게 표시
 spring.jpa.properties.hibernate.format_sql=true
 
-# Log Message 설정
+# 데이터베이스 유형 지정
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.Oracle10gDialect
+
+
+####################
+
+
+### MyBatis 설정 ###
+
+# 데이터베이스의 조회 결과 데이터를 담을 클래스들의 패키지 지정
+mybatis.type-aliases-package=com.example.finalProject.api.domain
+
+# mapper xml 경로 설정
+mybatis.mapper-locations=mapper/**/*.xml
+
+# model 프로퍼티 camel case 설정
+mybatis.configuration.map-underscore-to-camel-case=true
+
+
+####################
+
+
+### Log Message 설정 ###
+
+# hibernate를 통한 SQL 로그 남김
 logging.level.org.hibernate.SQL=DEBUG
+
+# hibernate가 보여주는 로그의 ?에 어떤 값이 들어갔는지 확인
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
-# Thymeleaf 설정
-# Thymeleaf 참조 경로
+
+####################
+
+
+### Thymeleaf 설정 ###
+
+# Thymeleaf 참조 경로
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
-# Thymeleaf 참조 경로에 파일이 있는지 없는지 체크, 없으면 에러 발생
+
+# Thymeleaf 참조 경로에 파일이 있는지 없는지 체크, 없으면 에러 발생
 spring.thymeleaf.check-template-location=true
-# Thymeleaf에 대한 캐시를 남기지 않음
+
+# Thymeleaf에 대한 캐시를 남기지 않음
 spring.thymeleaf.cache=false
