--- a/finalProject/src/frontend/vue_page/package.json
+++ b/finalProject/src/frontend/vue_page/package.json
@@ -15,7 +15,8 @@
     "bootstrap-vue": "^2.21.2",
     "vue": "^2.6.14",
     "vue-router": "^3.0.1",
-    "vuex": "^3.6.2"
+    "vuex": "^3.6.2",
+    "vuex-persistedstate": "^4.1.0"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
