--- a/finalProject/src/frontend/vue_page/package.json
+++ b/finalProject/src/frontend/vue_page/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
     "bootstrap-vue": "^2.21.2",
+    "element-ui": "^2.15.6",
     "vue": "^2.6.14",
     "vue-router": "^3.0.1",
     "vuex": "^3.6.2",
